# Aue_Natural_Pricing

./: .gitignore  CLEANUP_RECOMMENDATIONS.md  DASHBOARD_AUTOMATION.md  EER_DIAGRAM_SPEC.md  FINAL_README_UPDATED.md  FIX_MISSING_PRODUCTS.md  Final_AUE_Scraping_Model_NoAltTool.xlsx  Import_data.py  PowerBI_AutoUpdate_Guide.md  PowerBI_Setup_Guide.md  Pricing_Scraping_Tools_Recommendation.xlsx  Proposal Aue Natural_21154568.docx  README.md  brand_analysis.py  cleandata_script.py  cleaned_beauty_data.csv  create_powerbi_quickstart.py  env.example  import_all_CSVs.py  import_clean_data.py  oxylabs_googleshopping_script.py  powerbi.env.example  product_matching_pipeline.py  pyproject.toml  requirements.txt  run_all.sh  run_complete_pipeline.py  run_full_pipeline.py  run_pipeline.py  setup.sh  setup_powerbi.py  temp_query.sql  testrun_queries.sql  unmatched_products_v3.csv
data/: README.md
database_to_import/: brand_20251202_110229.csv  brand_20251202_110853.csv  brand_20251202_110903.csv  brand_20251202_114132.csv  brand_20251202_120552.csv  category_20251202_110853.csv  category_20251202_110903.csv  create_schema.sql  date_dim.csv  docker-compose.yml  price_history.csv  price_source_20251202_114132.csv  product.csv  product_20251202_110229.csv  product_20251202_110853.csv  product_20251202_110903.csv  product_20251202_114132.csv  product_20251202_120552.csv  retailer_20251202_110229.csv  retailer_20251202_110853.csv  retailer_20251202_110903.csv  retailer_20251202_114132.csv  retailer_20251202_120552.csv
database_to_import_OLD_20251212_123906/: dim_brand.csv  dim_date.csv  (+3 more)
(+161 files in other folders)
