[tool.poetry]
name = "aue-natural-pricing"
version = "1.0.0"
description = "Dynamic pricing and data warehouse pipeline for Auê Natural using Oxylabs, RapidFuzz, and PostgreSQL."
authors = ["Mahnoor Bilal <mahnoor.bilal@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# --- Core data processing ---
pandas = ">=2.3.0"
numpy = ">=2.3.0"

# --- Database connectivity (PostgreSQL + SQLAlchemy ORM) ---
SQLAlchemy = ">=2.0.0"
psycopg2-binary = ">=2.9.0"

# --- Fuzzy matching & text processing ---
rapidfuzz = ">=3.0.0"
regex = ">=2023.0.0"

# --- Web scraping & API calls ---
requests = ">=2.31.0"

# --- Scheduling / automation ---
python-dateutil = ">=2.9.0"
pytz = ">=2025.2"

# --- Validation / parsing ---
sqlparse = ">=0.4.0"

# --- Environment variables ---
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.0.0"
black = ">=25.0.0"
flake8 = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
